fix_folder_structure
